syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

// DEVELOPERS NOTE:
// $ cd ~/go/src/github.com/mikaponics/mikapod-soil
// $ protoc --go_out=plugins=grpc:. api/storage.proto

service MikapodStorage {
    rpc AddTimeSeriesDatum (TimeSeriesDatumRequest) returns (MikapodStorageResponse) {}

    // https://grpc.io/docs/tutorials/basic/go/
}

message TimeSeriesDatumRequest {
    int32 instrument = 1;
    float value = 2;
    google.protobuf.Timestamp timestamp = 3;
}

message MikapodStorageResponse {
    string message = 1;
    bool status = 2;
}

// def getAllTimeSeriesData(self):
//         return self.__storage.getAllTimeSeriesData()
//
//     def insertTimeSeriesDatum(self, instrument_uuid, value, timestamp, timestep):
//         return self.__storage.insertTimeSeriesDatum(instrument_uuid, value, timestamp, timestep)
//
//     def deleteTimeSeriesDatum(self, id):
//         return self.__storage.deleteTimeSeriesDatum(id)
//
//     def setKeyValueItem(self, key, value):
//         return self.__storage.setKeyValueItem(key, value)
//
//     def getValueFromKeyValueItemByKey(self, key):
//         return self.__storage.getValueFromKeyValueItemByKey(key)
//
//     def getAllTimeSeriesImageData(self):
//         return self.__storage.getAllTimeSeriesImageData()
//
//     def insertTimeSeriesImageDatum(self, instrument_uuid, image_info, timestamp, timestep):
//         # DEVELOPERS NOTE:
//         # - READ: https://pythonhosted.org/Pyro4/tipstricks.html?highlight=image#binarytransfer
//         # - In essence we need to use the `serpent` library to deserialize and convert to binary.
//         image_data = serpent.tobytes(image_info)   # in case of serpent encoded bytes
//         return self.__storage.insertTimeSeriesImageDatum(instrument_uuid, image_data, timestamp, timestep)

//TODO: IMPLEMENT: https://github.com/mikaponics/mikapod-soil/blob/master/src/storage/storage_service.py
